tests/baselines/reference/nonPrimitiveConstraintOfIndexAccessType.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(3,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(6,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(9,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(12,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(15,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(18,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
  Type 'string' is not assignable to type 'T["toString"] & T["toFixed"] & T["toExponential"] & T["toPrecision"] & T["valueOf"] & T["toLocaleString"]'.
    Type 'string' is not assignable to type 'T["toString"]'.
      Type 'string' is not assignable to type '(radix?: number | undefined) => string'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(21,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
  Type 'string' is not assignable to type 'T[number] & T["toString"] & T["valueOf"] & T["charAt"] & T["charCodeAt"] & T["concat"] & T["indexOf"] & T["lastIndexOf"] & T["localeCompare"] & T["match"] & T["replace"] & T["search"] & T["slice"] & T["split"] & T["substring"] & T["toLowerCase"] & T["toLocaleLowerCase"] & T["toUpperCase"] & T["toLocaleUpperCase"] & T["trim"] & T["length"] & T["substr"]'.
    Type 'string' is not assignable to type 'T["toString"]'.
      Type 'string' is not assignable to type '() => string'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(24,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(27,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
  Type 'string' is not assignable to type 'T["a"]'.
    Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts(30,5): error TS2322: Type 'string' is not assignable to type 'T[P]'.
  Type 'string' is not assignable to type 'T[string] & T[number]'.
    Type 'string' is not assignable to type 'T[string]'.
      Type 'string' is not assignable to type 'number'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveConstraintOfIndexAccessType.ts (10 errors) ====
    // test for #15371
    function f<T extends object, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function g<T extends null, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function h<T extends undefined, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function i<T extends void, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function j<T extends never, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function k<T extends number, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
!!! error TS2322:   Type 'string' is not assignable to type 'T["toString"] & T["toFixed"] & T["toExponential"] & T["toPrecision"] & T["valueOf"] & T["toLocaleString"]'.
!!! error TS2322:     Type 'string' is not assignable to type 'T["toString"]'.
!!! error TS2322:       Type 'string' is not assignable to type '(radix?: number | undefined) => string'.
    }
    function o<T extends string, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
!!! error TS2322:   Type 'string' is not assignable to type 'T[number] & T["toString"] & T["valueOf"] & T["charAt"] & T["charCodeAt"] & T["concat"] & T["indexOf"] & T["lastIndexOf"] & T["localeCompare"] & T["match"] & T["replace"] & T["search"] & T["slice"] & T["split"] & T["substring"] & T["toLowerCase"] & T["toLocaleLowerCase"] & T["toUpperCase"] & T["toLocaleUpperCase"] & T["trim"] & T["length"] & T["substr"]'.
!!! error TS2322:     Type 'string' is not assignable to type 'T["toString"]'.
!!! error TS2322:       Type 'string' is not assignable to type '() => string'.
    }
    function l<T extends {}, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
    }
    function m<T extends { a: number }, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
!!! error TS2322:   Type 'string' is not assignable to type 'T["a"]'.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    }
    function n<T extends { [s: string]: number }, P extends keyof T>(s: string, tp: T[P]): void {
        tp = s;
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'T[P]'.
!!! error TS2322:   Type 'string' is not assignable to type 'T[string] & T[number]'.
!!! error TS2322:     Type 'string' is not assignable to type 'T[string]'.
!!! error TS2322:       Type 'string' is not assignable to type 'number'.
    }
    